<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Cancer Buddy</string>
    <string name="version_name">Version - 1.0.0</string>
    <string name="version_name1">©2022 CancerBuddy</string>
    <string name="version_name2">All Right Reserved</string>
    <string name="googleIdToken">1039767538853-6jjnmkprl5395fbpcr86vca981d57c5s.apps.googleusercontent.com</string>
    <string name="facebookId">2342131725810594</string>
    <string name="register">Register</string>
    <string name="email_id">Email Id..</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">forgot Password ?</string>
    <string name="add_complaint">Profile</string>
    <string name="channedId">cancer_buddy</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="notification">Notification</string>
    <string name="account">Profile</string>
    <string name="home">Home</string>
    <string name="order">Order</string>
    <string name="medicine">Medicine Management</string>
    <string name="track_sym">Record Symptoms</string>
    <string name="track_sym1">View Symptoms Record </string>
    <string name="food_diet">Food and Diet</string>
    <string name="exercise">Exercise</string>
    <string name="communityf">Community Forum</string>
    <string name="TermC">Term and Conditions</string>
    <string name="select_option">Select Option</string>
    <string name="share_app">Share App</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_us">Rate Us</string>
    <string name="more_apps">More Apps</string>
    <string name="logout">Logout</string>
    <string name="noconnection">Kindly connect to a WIFI network or enable Mobile Data</string>
    <string name="title_activity_maps">Map</string>
    <string name="about">About Us</string>
    <string name="about1">Your buddy along the way</string>
    <string name="about2">Cancer Buddy is your go-to tool to organise your cancer journey. Living with cancer often requires constant and repetitive need to manage symptoms, medicine intake, and making appropriate lifestyle choices, which can get messy and stressful. Our application aims to ease such a burden off of patients.</string>
    <string name="about3">One App to do it all</string>
    <string name="about4">With functions to address the various needs of cancer patients all incorporated into ONE application, Cancer Buddy hopes to streamline the cancer journey management.</string>
    <string name="about5">Our Services</string>
    <string name="about6">Medicine Management</string>
    <string name="about7">Set reminders to alert yourself when it is time to take your medicine. Use our tool to keep track of your medicines, add personalised notes about your medicine intake.</string>
    <string name="about8">Track your Symptoms</string>
    <string name="about9">Keep track of the presence and severity of your symptoms. Data visualisation techniques help you see the trend of your symptoms over time to give deeper insights into your recovery process.</string>
    <string name="about10">Food and Diet</string>
    <string name="about11">Stay conscious of your food intake, access guidelines recommended for cancer patients along with sample recipes and diet plans.</string>
    <string name="about12">Exercise</string>
    <string name="about13">Boost your immunity by staying active through exercise. Access various categories of exercises, open up the video and simply do along.</string>
    <string name="about14">Community Forum</string>
    <string name="about15">Keep up to date and connect with others going through similar experiences. Share and receive support from other cancer patients.</string>
    <string name="cardio">CARDIO</string>
    <string name="c1">STEP UP KNEE LIFTS</string>
    <string name="c2">JUMPING JACKS</string>
    <string name="c3">LATERAL HOPS</string>
    <string name="c4">FAST STEP UPS</string>
    <string name="c5">FRONT KICK PLANK</string>
    <string name="c6">SIDE TO SIDE LUNGE WITH PUNCHES</string>
    <string name="c7">SQUAT REACH AND JUMP</string>
    <string name="c8">SUPERMAN</string>
    <string name="c9" tools:ignore="ExtraTranslation">SUPERMAN</string>
    <string name="c1A"> </string>
    <string name="c2A">1 to 20 Reps each leg. </string>
    <string name="c3A">1 to 20 Reps each leg. </string>
    <string name="c4A">1 to 20 Reps each leg. </string>
    <string name="c5A">1 to 20 Reps each leg. </string>
    <string name="c11">Keep left foot on step.Step up with right leg by not putting on step and bend knees to bring towards chest. Step down by right and then left foot. Step up and repeat.</string>
    <string name="c21">Stand with feet together and arms at side. Jump by raising your arms and separating legs to side. Land on your toes with arms raised above head.</string>
    <string name="c31">Jump side to side by keeping legs together and hands on your waist. Land by slightly bending kness and on the balls of your feet.</string>
    <string name="c41">Quick step ups with alternate legs.</string>
    <string name="c51">Keep feet together. Then right knee up and kick. Then balance on left leg and keep right leg behind with hands on floor and bring back left leg to make a plank. Step left leg to make lunge and kick with right leg again. Make plank again and continue.</string>
    <string name="c61">Face forward. Step right leg back and bend to a lunge. Punch with left then right arm. Come to center and do the same but to the left side now and keep on alternating.</string>
    <string name="c71">Make a squat by keeping legs shoulder width apart. From the squat, jump up with bith hands above and land on a squat.</string>
    <string name="c81">Lay down and keep core tight. Kepp hips on the ground and raise right leg and left arm and stretch. Then lower down and alternate sides.</string>
    <string name="yoga">Yoga</string>
    <string name="y1">STANDING FORWARD BEND</string>
    <string name="y2">STANDING BACKWARD BEND</string>
    <string name="y3">TRIANGLE POSE</string>
    <string name="y4">PIGEON POSE</string>
    <string name="y5">EAGLE POSE</string>
    <string name="y6">TREE POSE</string>
    <string name="y7">WARRIOR II POSE</string>
    <string name="y8">BOAT POSE</string>
    <string name="y11">Stand straight and stretch spine. Inhale and reach down and touch the toes by keeping knees straight and hold. Exhale and reach up and stretch by keeping arms above.</string>
    <string name="y21">Stand straight and stretch spine. Keep hands above and after inhaling bend backwards as much possible. Hold and come back to normal position while exhaling.</string>
    <string name="y31"> Keep feet more than shoulder width apart with arms stretched so they are parallel to ground. Bend to the right side and touch right feet with right arm and look towards left hand. Come back to normal position and bend alternate side.</string>
    <string name="y41"> Lay down and bring your left knee forward and keep right leg stretched back. The elongate spine and look up. Keeep hold for 30 seconds and then relax and alternate sides.</string>
    <string name="y51">Stand straight and sit in chair position.Lift right leg over left and tuck your foot and bring right arm under left arm. Sit back and hold for 20 seconds. Come back to standing and alternate sides.</string>
    <string name="y61">Stand straight and balanced. Bend right leg at the knee and keep the foot on left inner thigh. Stretch your body and hold for 20 seconds. Relax and change side.</string>
    <string name="y71">Keep feet more than shoulder width apart. Extend arms to side and relax shoulders. Turn left leg 90 degress and bend into lunge. Turn head to left and look over the fingers. Alternate sides.</string>
    <string name="f1">1.	Blueberries</string>
    <string name="f2">They help to boost the immune system. Blueberries are not only packed with vitamin C, fibre, and manganese but are also rich in cancer-fighting antioxidants. One research revealed that blueberries are associated with inhibition of cancer cell proliferation.</string>
    <string name="f3">2.	Apples</string>
    <string name="f4">Apples are rich in polyphenols, substances that may have anti-inflammatory, anti-cancer, and tumour-fighting properties. One study even suggested that the polyphenols in apples inhibit the growth of breast cancer cells.</string>
    <string name="f5">3.	Ginger</string>
    <string name="f6">During cancer treatment, patients may encounter certain side-effects like nausea. Ginger can help to relieve nausea and essentially calms the stomach.Gigner also contains antioxidants and anti-inflammatory compounds.</string>
    <string name="f7">4.	Carrots</string>
    <string name="f8">Carrots contain beta-carotene, a potent antioxidant that helps to boost the immune system and promote brain, skin, eye and lung health.</string>
    <string name="f9">5.	Green Leafy Vegetables</string>
    <string name="f10">Leafy greens contain a lot of vitamins and minerals that improve our overall health, which protects patients’ bodies from other diseases, improves recovery, and increases your resistance to treatment side-effects.</string>
    <string name="f11">6.	Fatty Fish</string>
    <string name="f12">They contain nutrients such as potassium, vitamin B, and omega-3 fatty acids which are known to be good for the heart. </string>
    <string name="f13">7.	Walnets</string>
    <string name="f14">Walnuts provide antioxidants. Some researchers also found that consuming walnuts could change the bacteria in our digestive system in a way that suppresses colon cancer.</string>
    <string name="f15">8.	Beans</string>
    <string name="f16">Beans contain many cancer-fighting agents like phytates, which help slow down certain cancers, protease inhibitors that help slow tumour development, and manganese that protects cells from damage.</string>
    <string name="f17">9.	Mushrooms</string>
    <string name="f18">Mushrooms help to boost the immune system.</string>
    <string name="f19">10.	Turmeric</string>
    <string name="f20">The curcumin in turmeric has antioxidant properties that may reduce inflammation. In addition, some reports also mentioned that curcumin could slow down cancer progression, protect healthy cells, and make chemotherapy more effective.</string>
    <string name="fa1">Food Safety: Foods to limit or avoid</string>
    <string name="fa2">It is important to cut back on foods that may aggravate your health</string>
    <string name="fa3"> Examples include alcohol and foods high in saturated fats, sodium, and sugars. </string>
    <string name="fa4">Besides these foods, avoid the following would also help to reduce the risk of food poisoning:</string>
    <string name="fa5">●	Uncooked cold cuts; even pre-cooked luncheon meats must be reheated until ‘steaming hot’</string>
    <string name="fa7">●	Unpasteurised milk, or cheese made from unpasteurised milk</string>
    <string name="fa8">●	Unwashed fruits and vegetables</string>
    <string name="fa9">●	Ready-made or deli-salad with egg, ham, chicken, or seafood as it is not practical to reheat them</string>
    <string name="fa10">●	Raw seafood or meat, such as sushi and sashimi</string>
</resources>