<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/backgroud"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/custom_border1"
        android:padding="10dp"
        android:layout_height="wrap_content">



        <androidx.cardview.widget.CardView
            android:id="@+id/cardSys"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:background="@drawable/backgroud"
                android:layout_height="50dp">

                <ImageView
                    android:id="@+id/backToHide"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="2dp"
                    android:src="@drawable/close" />

                <TextView
                    android:id="@+id/scheme_new_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="10dp"
                    android:text="Encouraged Food"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardSys"
            android:orientation="vertical">
            
            
       



    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:fontFamily="serif-monospace"
        android:textStyle="bold"
        android:text="@string/f1"
        android:textColor="@color/black"/>

        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:text="@string/f2"
            android:textColor="@color/gray"/>


        <TextView
            android:id="@+id/text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"
            android:text="@string/f3"

            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/text4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:text="@string/f4"

            android:textColor="@color/gray"/>
        <TextView
            android:id="@+id/text5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"
            android:text="@string/f5"

            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/text6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:text="@string/f6"

            android:textColor="@color/gray"/>
        <TextView
            android:id="@+id/text7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:fontFamily="serif-monospace"
            android:text="@string/f7"

            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/text8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:text="@string/f8"

            android:textColor="@color/gray"/>
        <TextView
            android:id="@+id/text9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:text="@string/f9"

            android:fontFamily="serif-monospace"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/text10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:text="@string/f10"

            android:textColor="@color/gray"/>
        <TextView
            android:id="@+id/text11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:text="@string/f11"

            android:fontFamily="serif-monospace"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/text12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:text="@string/f12"

            android:textColor="@color/gray"/>
        <TextView
            android:id="@+id/text13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"
            android:text="@string/f13"

            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/text14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:text="@string/f14"

            android:textColor="@color/gray"/>
        <TextView
            android:id="@+id/text15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"
            android:text="@string/f15"

            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/text16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:text="@string/f16"

            android:textColor="@color/gray"/>
        <TextView
            android:id="@+id/text17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"
            android:text="@string/f17"

            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/text18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:text="@string/f18"

            android:textColor="@color/gray"/>
        <TextView
            android:id="@+id/text19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"
            android:text="@string/f19"

            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/text20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:text="@string/f20"


            android:textColor="@color/gray"/>
        </LinearLayout>
        
        


    </RelativeLayout>

</ScrollView>