<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/backgroud"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/custom_border1"
        android:padding="10dp"
        android:layout_height="wrap_content">



        <androidx.cardview.widget.CardView
            android:id="@+id/cardSys"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:background="@drawable/backgroud"
                android:layout_height="50dp">

                <ImageView
                    android:id="@+id/backToHide"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="2dp"
                    android:src="@drawable/close" />

                <TextView
                    android:id="@+id/scheme_new_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="10dp"
                    android:text="Dietary Restrictions"
                    android:textAlignment="center"
                    android:textColor="@color/red"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardSys"
            android:orientation="vertical">






            <TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:fontFamily="serif-monospace"
                android:textStyle="bold"
                android:text="@string/fa1"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:text="@string/fa2"
                android:textColor="@color/gray"/>

            <TextView
                android:id="@+id/text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:text="@string/fa3"
                android:textColor="@color/gray"/>

            <TextView
                android:id="@+id/text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:text="@string/fa4"
                android:textColor="@color/gray"/>





            <TextView
                android:id="@+id/text5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="textStart"
                android:fontFamily="serif-monospace"
                android:textStyle="bold"
                android:text="@string/fa5"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/text6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="textStart"
                android:fontFamily="serif-monospace"
                android:textStyle="bold"
                android:text="@string/fa7"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/text7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="textStart"
                android:fontFamily="serif-monospace"
                android:textStyle="bold"
                android:text="@string/fa8"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/text8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="textStart"
                android:fontFamily="serif-monospace"
                android:textStyle="bold"
                android:text="@string/fa9"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/text9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="textStart"
                android:fontFamily="serif-monospace"
                android:textStyle="bold"
                android:text="@string/fa10"
                android:textColor="@color/black"/>


        </LinearLayout>

    </RelativeLayout>

</ScrollView>